boreal/tests/assets/invalid_files/parsing/base64_invalid_length.yar
rule a {
    strings:
        $a = "a" base64("abc")
    condition:
        $a
}
